# OpenVyapar-ERP

./: .gitignore  INSTALL.md  README.md  docker-compose.yml  start-dev.bat
backend/app/Models/: Challan.php  Customer.php  Product.php  SalesInvoice.php  SalesInvoiceItem.php  StockTransaction.php  Unit.php
backend/app/Services/: BackupSyncService.php  InventoryService.php  InvoiceNumberService.php
backend/database/migrations/: 2026_06_28_100005_create_categories_table.php  2026_06_28_100007_create_products_table.php  2026_06_28_100008_create_warehouses_table.php  2026_06_28_100011_create_suppliers_table.php  2026_06_28_100012_create_sales_invoices_table.php  2026_06_28_100014_create_purchase_invoices_table.php  2026_06_28_100015_create_purchase_invoice_items_table.php  2026_06_29_083639_add_role_to_users_table.php  2026_06_30_100002_create_challans_table.php  2026_06_30_200002_create_backup_sync_settings_table.php
backend/database/seeders/: DatabaseSeeder.php
backend/routes/: api.php
docker/: Dockerfile.backend  Dockerfile.frontend
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.ts  style.css
frontend/src/api/: client.ts
portable/: .gitignore  README-PORTABLE.md  start.bat  stop.bat
portable/app/: .env  composer.json
portable/config/: env.portable  php.ini
portable/installer/: setup.iss
portable/launcher/: reset.bat  setup.bat  start.bat  stop.bat
portable/launcher-rs/: Cargo.toml  build.rs
portable/launcher-rs/src/: main.rs
portable/php/: php.ini
portable/www/: index.html
(+278 files in other folders)
